--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo list</title>
+    <script src="https://kit.fontawesome.com/ee4988d839.js" crossorigin="anonymous"></script>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
         body{
             background-color: #0093E9;
             background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
@@ -34,7 +40,7 @@
             font-size: 20px;
         }
         .action-container{
-            width: 300px;
+            width: 400px;
             display: block;
             margin: 20px auto;
         }
@@ -46,12 +52,26 @@
         }
         .btn{
             border: none;
-            background-color: black;
-            border-radius: 15px;
-            color: white;
-            padding: 10px 15px;
-            font-size: 15px;
-        }
+            background-image: linear-gradient(to right, #2b5876 0%, #4e4376  51%, #2b5876  100%);
+            margin: 0px 0px 0px 10px;
+            width: 50px;
+            height: 40px;
+            text-align: center;
+            text-transform: uppercase;
+            transition: 0.5s;
+            background-size: 200% auto;
+            color: white;            
+            box-shadow: 0 0 20px #eee;
+            border-radius: 10px;
+            
+          }
+
+          .btn-grad:hover {
+            background-position: right center; /* change the direction of the change here */
+            color: #fff;
+            text-decoration: none;
+          }
+         
     </style>
 </head>
 <body>
@@ -60,7 +80,7 @@
     </div>
     <div class="action-container">
         <input type="text" id="input-value" class="inp">
-        <button class="btn" onclick="getinp()">Add</button>
+        <button class="btn" onclick="getinp()"><i class="fa-brands fa-telegram"></i></button>
 
     </div>
     <script>
